<resources>
    <string name="app_name">Rawr</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="user">Username</string>
    <string name="pass">Password</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="iniciarSesion">Sign In</string>
    <string name="registerUser">Sign up</string>
    <string name="registerPet">Create</string>
    <string name="title_activity_lista_personas">ListaPersonas</string>
    <string name="title_activity_lista_empresas">ListaEmpresas</string>
    <string name="title_activity_lista_animales">ListaAnimales</string>
    <string name="title_activity_perfil_persona">PerfilPersona</string>
    <string name="title_activity_search_friend">a</string>
    <string name="title_activity_politics_screen">b</string>
    <string name="title_activity_downloading_window">downloading_window</string>
    <string name="title_activity_Newsfeed">newsfeed_window</string>
    <string name="title_pet_profile">Amigos</string>
    <string name="title_activity_loading_window">loading_window</string>
    <string name="title_activity_petProfile">pet profile window</string>
    <string name="titulo_perfil_persona">Bio</string>
    <string name="title_activity_sign_up_wndow">SignUp_wndow</string>
    <string name="title_activity_create_pet_window">createPet_window</string>
    <string name="app_id">435269556620383</string>
    <string name="preference_file_key">com.example.david.rawr.PREFERENCE_FILE_KEY</string>
    <string name="SignUp_Policy">By clicking Sign up, you agree to our Terms and that read our Data Policy</string>
    <string name="title_activity_newsfeed_window">newsfeed_window</string>
    <string name="title_activity_sign_up_add_photo_window">sign_up_add_photo_window</string>
    <string name="title_activity_owner__profile_window">Owner_Profile_window</string>
    <string name="title_activity_configuration_screen">Configuration_screen</string>
    <string name="title_activity_chat_window">Chat_window</string>
    <string name="title_activity_friend_requests_screen">friend_requests_screen</string>
    <string name="privacity_politics">RAWR es una red social de mascotas exclusiva para usuarios registrados,

pensada para amantes de las mascotas que deseen ponerse en contacto entre sí, 

ya sea para ofrecer un servicio (Usuarios empresas) o bien para adoptar o generar 

amistades entre perros (Usuarios dueños o futuros dueños).

Al utilizar la aplicación RAWR tanto los usuarios registrados como los visitantes 

ocasionales manifiestan haber leído y comprendido los Términos y Condiciones 

enunciados en esta sección. Los mismos podrán ser cambiados, modificados, 

ampliados o eliminados total o parcialmente por RAWR en cualquier momento y 

sin previo aviso. En tal caso, RAWR publicará los términos y condiciones 

modificados en esta misma sección, especificando en la parte superior de la 

misma la fecha de última revisión de los mismos. Si luego de dichas 

modificaciones los usuarios o visitantes ocasionales usaran la aplicación, estarían 

aceptando implícitamente el acuerdo con los nuevos Términos y Condiciones. Por 

el contrario, si los usuarios o visitantes ocasionales no aceptaran los Términos y 

Condiciones actuales o futuros, no deberían acceder ni utilizar la aplicación. Si 

bien RAWR fomenta la consulta regular de sus Términos y Condiciones, son los 

usuarios responsables de efectuarlo y estar al tanto de las actualizaciones 

realizadas.

Los usuarios de RAWR deberán leer atentamente estos Términos y Condiciones, 

dado que contienen información importante acerca de sus derechos legales, los 

medios para hacer valer tales derechos y sus obligaciones. Estos Términos y 

Condiciones incluyen, además, diversas limitaciones y exclusiones, así como una 

cláusula de resolución de conflictos que regula el modo en que se solventará 

cualquier controversia.</string>
    <string name="admition_politics"> La admisión como miembro de los servicios provistos por RAWR no será posible 

en aquellos supuestos en que esté prohibida. Esta aplicación está destinada 

exclusivamente a usuarios mayores de 13 años. El registro en a la aplicación, su 

uso o el acceso al mismo por parte de personas menores de 13 años no está 

permitido, no se autoriza bajo licencia y constituye una infracción de los presentes 

Términos y Condiciones de uso. Al utilizar los servicios de la aplicación, los 

usuarios manifiestan y garantizan ser mayores de 13 años, y de ese modo 

aceptan y se comprometen a cumplir todos los Términos y Condiciones aquí 

expuestos.</string>
    <string name="register_politics">Los usuarios registrados en RAWR acceden a: 

(a) Suministrar información verdadera, actualizada y completa sobre sí mismos

como puede ser requerida por cualquiera de los formularios de registro de la

aplicación.

(b) Mantener la seguridad de su contraseña e identificación.

(c) Mantener y actualizar puntualmente los datos de registro y cualquier otra

información suministrada a RAWR para mantenerla correcta, actualizada y

completa, tanto la suya como la de sus mascotas.

(d) Hacerse totalmente responsables de todo uso de su cuenta, así como de

cualquier acción que tenga lugar mediante el uso de la misma.</string>
    <string name="content_politics">Todo el contenido de la aplicación y todo el contenido disponible a través del

servicio, incluyendo diseños, texto, gráficos, imágenes, vídeo, información, 

aplicaciones, software, música, sonido y otros archivos, así como su selección y 

disposición (el "Contenido de la aplicación"), son propiedad exclusiva de la RAWR, 

de sus usuarios o de sus licenciantes, con todos los derechos reservados. 

Ninguna parte del contenido de la aplicación podrá ser modificada, copiada, 

distribuida, enmarcada, reproducida, republicada, descargada, mostrada, 

publicada, transmitida o vendida en modo alguno o por ningún medio, total o 

parcialmente, sin el previo consentimiento por escrito de RAWR.

 

En el caso de los usuarios registrados, RAWR les otorga una licencia limitada para 

usar y acceder a la aplicación y al contenido de la aplicación, y para descargar o 

imprimir una copia de cualquier parte del contenido de la aplicación a la que hayan 

obtenido acceso legítimamente y sólo para su uso personal y no comercial, 

siempre y cuando mantengan intactas todas las advertencias sobre derechos de 

autor y propiedad intelectual.

 

A excepción de sus propias cuentas, los usuarios de RAWR no podrán cargar o 

volver a publicar contenido de la aplicación en ningún sitio de Internet, Intranet o 

Extranet ni integrar la información en ninguna otra base de datos o compilación. 

Cualquier otro uso del contenido de la aplicación queda estrictamente prohibido. 

Esta licencia queda sujeta a los presentes Términos y Condiciones, y no incluye el 

uso de métodos de recopilación o extracción de datos (data minning, robots o 

similares).

 

El uso de la aplicación o del contenido de la aplicación de modo distinto al 

específicamente autorizado en los presentes Términos y Condiciones de uso, sin 

el previo consentimiento por escrito de RAWR, queda estrictamente prohibido y 

revocará la licencia otorgada en virtud de lo comentado en esta sección. El uso no 

autorizado podrá constituir asimismo una infracción de la legislación aplicable, 

incluyendo las leyes de marcas y derechos de autor, y de las normativas y 

reglamentos aplicables en materia de comunicaciones. Salvo que se indique 

expresamente lo contrario en los presentes Términos y condiciones, nada de lo 

dispuesto aquí deberá interpretarse en el sentido de otorgar una licencia sobre 

derechos de propiedad intelectual, ya sea por impedimento legal, implícitamente o 

de cualquier otra forma. Esta licencia podrá ser revocada en cualquier momento y 

sin preaviso, con o sin causa.</string>
    <string name="brand_politics">RAWR es una marca Colombiana. Las marcas e imágenes de marca no podrán

utilizarse, ni siquiera como parte de marcas o nombres de dominio, en relación con 

ningún producto o servicio de forma que puedan causar confusión. Tampoco 

podrán copiarse, imitarse o utilizarse, total o parcialmente, sin el previo 

consentimiento por escrito de los propietarios de la marca.</string>
</resources>