<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="rawr.com.rawr.login_window"
    android:orientation="vertical"
    android:background="#DAFF1B">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/loadingAnimation"
                android:adjustViewBounds="false"
                android:scaleType="fitXY"
                android:layout_alignParentRight="true" />
            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="@dimen/tamano_logo_ancho"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="120dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/signup_tittle"/>
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/user_tx"
                    android:hint="@string/user"
                    android:gravity="center_horizontal"
                    android:background="@drawable/edit_text_style"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/pass_tx"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/pass"
                    android:gravity="center_horizontal"
                    android:background="@drawable/edit_text_style"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/name_tx"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:hint="@string/name"
                    android:background="@drawable/edit_text_style"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/lastname_tx"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/lastname"
                    android:gravity="center_horizontal"
                    android:background="@drawable/edit_text_style"
                    />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical = "true"
                    android:text="@string/registerUser"
                    android:id="@+id/singUp_bt"
                    android:background="@drawable/button_style"
                    />
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/SignUp_Policy"
                    android:layout_marginTop="10dp"
                    android:textAlignment="center"
                    android:gravity="center_vertical|center_horizontal" />
            </LinearLayout>
            </ScrollView>
        </RelativeLayout>
</LinearLayout>