<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="rawr.com.rawr.login_window"
    android:orientation="vertical"
    android:background="#DAFF1B">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/activity_sign_up_imageView_loadingAnimation"
                android:adjustViewBounds="false"
                android:scaleType="fitXY"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/dataBaseLoadingAnimation" />
            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="@dimen/tamano_logo_ancho"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/activity_sign_up_editText_username"
                    android:hint="@string/user"
                    android:gravity="center_horizontal"
                    android:background="@drawable/edit_text_style"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/activity_sign_up_editText_password"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/pass"
                    android:gravity="center_horizontal"
                    android:background="@drawable/edit_text_style"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/activity_sign_up_editText_name"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:hint="@string/name"
                    android:background="@drawable/edit_text_style"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/activity_sign_up_editText_lastname"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/lastname"
                    android:gravity="center_horizontal"
                    android:background="@drawable/edit_text_style"
                    />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical = "true"
                    android:text="@string/registerUser"
                    android:id="@+id/activity_sign_up_button_sign_up"
                    android:background="@drawable/button_style"
                    />


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="100">

                    <ImageView
                        android:layout_width="@dimen/tamano_iconos_login"
                        android:layout_height="@dimen/tamano_iconos_login"
                        android:id="@+id/activity_sign_up_imageButton_facebookIcon"
                        android:layout_margin="5dp"
                        android:src="@drawable/face_icon" />

                    <ImageView
                        android:layout_width="@dimen/tamano_iconos_login"
                        android:layout_height="@dimen/tamano_iconos_login"
                        android:id="@+id/activity_sign_up_imageButton_googleIcon"
                        android:layout_margin="5dp"
                        android:src="@drawable/google_icon" />

                </LinearLayout>

            </LinearLayout>
            </ScrollView>

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/activity_sign_up_listView_test" />
        </RelativeLayout>

</LinearLayout>