<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="rawr.com.rawr.login_window"
    android:orientation="vertical"
    android:background="#DAFF1B">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

            <ImageView
                android:layout_width="@dimen/tamano_logo_ancho"
                android:layout_height="@dimen/tamano_logo_alto"
                android:id="@+id/img_login_logo"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo"
                android:adjustViewBounds="false"
                />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="@dimen/tamano_logo_ancho"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userText"
                android:hint="@string/user"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/passText"
                android:layout_gravity="center_horizontal"
                android:hint="@string/pass"
                android:gravity="center_horizontal" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/iniciarSesion"
                android:id="@+id/logInButton" />

            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Forgot your password?"
                android:layout_gravity="center_horizontal"
                android:id="@+id/forgotPassButton"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="@dimen/tamano_logo_ancho"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="100">

                <ImageView
                    android:layout_width="@dimen/tamano_iconos_login"
                    android:layout_height="@dimen/tamano_iconos_login"
                    android:id="@+id/imageButton2"
                    android:layout_margin="5dp"
                    android:src="@drawable/face_icon" />

                <ImageView
                    android:layout_width="@dimen/tamano_iconos_login"
                    android:layout_height="@dimen/tamano_iconos_login"
                    android:id="@+id/imageButton"
                    android:layout_margin="5dp"
                    android:src="@drawable/google_icon" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/registro"
                    android:id="@+id/signUp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="30dp" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>